# meesho

.kroo/specs/catalogai-authenticity-detection/: design.md  requirements.md  tasks.md
catalogai/: .env.example  .gitattributes  .gitignore  LICENSE  QUICK-START.md  README.md  RUNBOOK.md  SETUP.md
catalogai/.github/workflows/: ci.yml
catalogai/backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
catalogai/backend/app/: config.py  db.py  main.py  models.py  schemas.py
catalogai/backend/app/pipeline/: classifier.py  features.py  reasons.py
catalogai/backend/app/pipeline/artifacts/: metrics.json
catalogai/backend/app/routers/: admin.py  health.py  scans.py
catalogai/backend/app/tests/: test_features.py  test_health.py
catalogai/data/seeds/: real_make.py  seed_run.py  synth_make.py
catalogai/frontend/: .env.example  .eslintrc.cjs  .prettierrc  .stylelintrc.json  Dockerfile  Dockerfile.debug  Dockerfile.dev  Dockerfile.minimal  Dockerfile.simple  docker-run.sh  emergency-fix.ps1  final-beautiful-ui.ps1  fix-css.ps1  laptop-fix.ps1  next.config.mjs  package.json  quick-fix.ps1  restart-dev.ps1  run-beautiful.ps1  run-complete.ps1  run-dev.ps1  run-dev.sh  run-with-backend.ps1  setup.md  stunning-ui-fix.ps1  tsconfig.json
catalogai/frontend/app/: api-simple.ts  api.ts  emergency-navbar-fix.css  laptop-fixed.css  layout.tsx  navbar-fix.css  page.tsx
catalogai/frontend/types/: axios.d.ts  (+7 more)
catalogai/ops/: dev_setup.sh  docker-compose.dev.yml  docker-compose.yml  fix-docker.ps1  run_local.sh  setup-new-system.ps1  setup-new-system.sh
(+6 files in other folders)
